tenants/le-portail/overlays/production/nextcloud/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: ${tenant}-nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.${domain}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
    - match: Host(`cloud.${domain}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls:
    secretName: wildcard.${domain}
